--- a/lista-contatti/src/app/lista-contatti/lista-contatti.component.html
+++ b/lista-contatti/src/app/lista-contatti/lista-contatti.component.html
@@ -1,1 +1,8 @@
-<p>lista-contatti works!</p>
+<div align="center" class="pt-2">
+    <div class="card" style="width:300px">
+      <img class="card-img-top" src="assets/img/Leao.jpg" alt="Card image" width="100px">
+      <div class="card-body">
+        <h4 class="card-title">Leao</h4>
+        <p class="card-text">Rapper di origine tunisina, che dopo la partecipazione all'ultimo sanremo sta facendo parlare molto di se.</p>
+    </div>
+</div>
