--- a/lista-contatti/src/app/lista-contatti/lista-contatti.component.html
+++ b/lista-contatti/src/app/lista-contatti/lista-contatti.component.html
@@ -1,8 +1,25 @@
-<div align="center" class="pt-2">
-    <div class="card" style="width:300px">
-      <img class="card-img-top" src="assets/img/Leao.jpg" alt="Card image" width="100px">
-      <div class="card-body">
-        <h4 class="card-title">Leao</h4>
-        <p class="card-text">Rapper di origine tunisina, che dopo la partecipazione all'ultimo sanremo sta facendo parlare molto di se.</p>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<div align="center" [ngStyle]="{'background-color': 'grey'} ">
+  <h1>LA AC MILAN LIST CONTACT</h1>
+  <br>
+  <div *ngFor="let element of persone index as i" style="width:600px" align="center">
+    <div class="background-color" [ngStyle]="{'background-color': element.colore} ">
+      <div>
+        <img src="{{element.img}}" width="200px">
+      </div>
+
+      <p>Nome: <strong>{{element.nome}}</strong></p>
+      <p>Telefono: <i>{{element.numtel}}</i></p>
+
+      <ng-template *ngIf = "element.isOnline; then bloccoIf else bloccoElse"></ng-template>
+        <ng-template #bloccoIf>
+          <div [ngStyle]="{'background-color': 'green', 'border-radius': '50%', 'width': '10px', 'height': '10px'}"></div>
+        </ng-template>
+        <ng-template #bloccoElse>
+          <div [ngStyle]="{'background-color': 'red', 'border-radius': '50%', 'width': '10px', 'height': '10px'}"></div>
+        </ng-template>
+        <br>
     </div>
+  </div>
 </div>
